# oh-my-pi

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dockerignore  Dockerfile.robomp  README.md  README_RB.md  package.json  update.sh
.github/: VOUCHED.td
.github/actions/build-native/: action.yml
.github/workflows/: ci.yml
crates/pi-iso/src/: linux_reflink.rs
crates/pi-natives/: Cargo.toml
crates/pi-natives/src/: ast.rs  desktop.rs  desktop_x11.rs  diff.rs  grep.rs  lib.rs  vectors.rs
docs/: advisor-watchdog.md  approval-mode.md  auth-broker-gateway.md  computer-use.md  config-usage.md  environment-variables.md  extensions.md  keybindings.md  models.md  provider-endpoint-constraints.md  provider-streaming-internals.md  providers.md  rpc.md  secrets.md  session-operations-export-share-fork-resume.md  settings.md  task-agent-discovery.md  vibe-mode.md
docs/tools/: computer.md  read.md  task.md  web_search.md
patches/: @ark%2Fschema@0.56.0.patch
python/omp-rpc/: README.md
python/omp-rpc/src/omp_rpc/: __init__.py  client.py  protocol.py
python/omp-rpc/tests/: test_client.py  test_protocol.py
python/robomp/: .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml
python/robomp/src/: config.py  db.py  github_client.py  github_events.py  host_tools.py  proxy_client.py  queue.py  sandbox.py  server.py  tasks.py
python/robomp/src/prompts/: host_tools.toml  system_append.md
python/robomp/src/proxy/: server.py
python/robomp/tests/: test_github_client.py  test_github_events.py  test_host_tools.py  test_proxy_server.py  test_sandbox.py  test_server.py  test_tasks.py
scripts/: ci-release-build-binaries.ts  ci-release-publish.test.ts  ci-release-publish.ts  ci-test-ts.ts  inline-functions.test.ts  inline-functions.ts  install.sh
types/assets/: index.d.ts
