[package]
name = "pi-natives"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true


[dependencies]
anyhow.workspace = true
arboard.workspace = true
ast-grep-core.workspace = true
base64.workspace = true
clap.workspace = true
globset.workspace = true
fontdue.workspace = true
grep-matcher.workspace = true
grep-pcre2.workspace = true
grep-regex.workspace = true
grep-searcher.workspace = true
html-to-markdown-rs.workspace = true
icy_sixel.workspace = true
ignore.workspace = true
image = { workspace = true, features = ["bmp"] }
inferno.workspace = true
napi.workspace = true
napi-derive.workspace = true
parking_lot.workspace = true
phf.workspace = true
flume.workspace = true
pi-ast.workspace = true
pi-iso.workspace = true
pi-shell.workspace = true
pi-walker.workspace = true
pi-uutils-ctx = { path = "../pi-uutils-ctx" }
portable-pty.workspace = true
png.workspace = true
rayon.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
syntect.workspace = true
tiktoken-rs.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true
xxhash-rust.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "=0.13.2", features = ["randr", "xtest"] }
xkeysym = "=0.2.1"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
enigo = { version = "=0.6.1", default-features = false }
xcap = { version = "=0.9.6", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
tempfile = "=3.27.0"
core-graphics = "0.25"

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Wdk_Storage_FileSystem", "Win32_Security", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
clipboard-win.workspace = true
winreg.workspace = true

[dev-dependencies]
xkeysym = "=0.2.1"

[build-dependencies]
napi-build.workspace = true
serde.workspace = true
serde_json.workspace = true
